<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

    <ImageView
        android:id="@+id/list_item_image_view"
        android:layout_width="@dimen/list_item_image_view"
        android:layout_height="@dimen/list_item_image_view"
        android:contentDescription="@string/workshop_image"
        android:scaleType="centerCrop"
        android:src="@drawable/ic_workshop1" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:orientation="vertical">

        <TextView
            android:id="@+id/name_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small"
            android:text="@string/name_workshop1"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size_large" />

        <TextView
            android:id="@+id/title_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/small"
            android:text="@string/title_workshop1"
            android:textSize="@dimen/text_size_medium" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/extra_large"
            android:layout_margin="@dimen/small"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/applied_button"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/applied"
                android:textColor="@color/green"
                android:textStyle="bold"
                android:visibility="gone" />

            <RelativeLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1">

                <ImageView
                    android:id="@+id/info_button"
                    android:layout_width="@dimen/extra_large"
                    android:layout_height="match_parent"
                    android:layout_alignParentEnd="true"
                    android:layout_marginEnd="@dimen/large"
                    android:contentDescription="@string/about_icon"
                    android:src="@drawable/ic_arrow_left" />

            </RelativeLayout>

        </LinearLayout>

    </LinearLayout>

</LinearLayout>